--- a/AFAapp/Views/Home/Tree.cshtml
+++ b/AFAapp/Views/Home/Tree.cshtml
@@ -2,92 +2,64 @@
 
 
 <!DOCTYPE html>
+<head>
+</head>
 
+<body>
 
-@{
-    if ((bool)ViewData["Accepted"])
-    {
-        <p> The word is accepted. </p>
+    @{
+        try
+        {
+            showTree(new Tree(Model.letter, Model.state, Model.connectives, Model.children));
+
+            if ((bool)ViewData["Accepted"])
+            {
+                <p class="right-col-p"> The word <strong> "@ViewData["inputWord"]" </strong> is accepted. </p>
+            }
+
+            else
+            {
+                <p class="right-col-p"> The word <strong> "@ViewData["inputWord"]" </strong> is <strong>not</strong> accepted. </p>
+            }
+        }
+        catch { }
+
     }
 
-    else
-    {
-        <p> The word is not accepted. </p>
-    }
-}
-
-
-@{
-
-
-    showTree2(new Tree(Model.letter, Model.state, Model.connectives, Model.children));
-}
-
-@functions
+    @functions
 {
 
-    public void showTree(Tree t, bool last = true, string indent = "")
-    {
-
-        string connectivesStr = "";
-
-
-        <p> @indent </p>
-        if (last)
+        public void showTree(Tree t)
         {
-            <b> \\- </b>;
-            indent += "  ";
-        }
-        else
-        {
-            <b> |- </b>
-            indent += "| ";
-        }
+            @*padding - left:inherit;*@
+@*style = "display:flex; justify-content: center"*@
+@*text - align:left*@
+            <div >
+                <ul style="list-style-position: inside;">
+                    <li>
+                        <b>@t.state</b>
+                        @foreach (var i in t.connectives)
+                        {
+                            <b>@i.Item1</b>
+                        }
 
-        foreach (var i in Model.connectives)
-        {
-            connectivesStr += i.Item1 + " ";
-        }
+                        @if (t.letter != '\0')
+                        {
+                            <b>(@t.letter)</b>;
 
-        <b>@t.state @connectivesStr @t.letter</b>;
+                        }
+                        @if (t.children != null && t.children.Any())
+                        {
+                            for (int i = 0; i < t.children?.Count; i++)
+                            {
+                                showTree(t.children[i]);
+                            }
+                        }
+                    </li>
 
-        for (int i = 0; i < t.children?.Count; i++)
-        {
-            showTree(t.children[i], i == t.children.Count - 1, indent);
+                </ul>
+            </div>
+
         }
     }
-
-
-    public void showTree2(Tree t)
-    {
-
-        <ul>
-            <li>
-
-                <b>@t.state</b>
-                @foreach (var i in t.connectives)
-                {
-                    <b>@i.Item1</b>
-                }
-
-                @if (t.letter != '\0')
-                {
-                    <b>(@t.letter)</b>;
-
-                }
-                @if (t.children != null && t.children.Any())
-                {
-                    for (int i = 0; i < t.children?.Count; i++)
-                    {
-                        showTree2(t.children[i]);
-                    }
-                }
-            </li>
-
-        </ul>
-
-    }
-
-}
-
-
+</body>
