--- a/AFAapp/Views/Home/Index.cshtml
+++ b/AFAapp/Views/Home/Index.cshtml
@@ -7,7 +7,6 @@
 
 <head>
     <link rel="stylesheet" href="~/css/homePage.css" />
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 
     <title>Alternating Finite Automata</title>
 
@@ -21,25 +20,25 @@
 
             <div class="instructions">
                 <p align="justify">
-                    Enter a FSM into the input field below or click <strong>Generate random DFA/NFA/eNFA</strong> to have the app generate a simple FSM randomly for you.
-                    Next, click <strong>Create automaton</strong> to display the FSM's transition graph.
+                    Enter an AFA and an input word below or click <strong>Generate example AFA</strong> to have the app generate an example for you.
+                    Next, click <strong>Run</strong> to display the computation. For detailed instructions on how to use the application see ref. For the relevant background on alternating finite automata please visit ref.
                 </p>
 
             </div>
 
-            <br />
+            <br/>
             <p>
-                <button id="generateAFA" class="btn btn-info">Generate example AFA</button>
+                <button id="generateExample" class="btn btn-info">Generate example AFA</button>
             </p>
 
             <br />
 
-            <form asp-controller="Home" asp-action="Tree5" method="post">
+            <form asp-controller="Home" asp-action="Tree5" method="post" id="form">
 
                 <div class="form-group">
                     <div class="row">
                         <div class="col">
-                            <input type="text" class="form-control" placeholder="Initial State" name="initialState" required>
+                            <input type="text" class="form-control" placeholder="Initial State" id="initialState" name="initialState" required>
                         </div>
                         <div class="col">
                         </div>
@@ -66,11 +65,11 @@
                                 <th class=" text-center align-middle">Transition Function</th>
 
                                 <th class="text-center" id="headCell">
-                                    <input class="form-control" placeholder="letter" type="text" name="letters" required>
+                                    <input class="form-control"id="letter1" placeholder="letter" type="text" name="letters" required>
                                 </th>
 
                                 <th>
-                                    <input class="form-control" placeholder="letter" type="text" name="letters" required>
+                                    <input class="form-control" id="letter2" placeholder="letter" type="text" name="letters" required>
                                 </th>
                             </tr>
                         </thead>
@@ -81,44 +80,44 @@
                                     <div class="input-group mb-3">
                                         <div class="input-group-prepend">
                                             <div class="input-group-text">
-                                                <input type="checkbox" name="isFinal" value="true">
+                                                <input type="checkbox" id="checkBox1" name="isFinal">
                                                 <input type="hidden" name="isFinal" value="false">
 
                                             </div>
                                         </div>
-                                        <input class="form-control" id="simple input" placeholder="state" type="text" name="states" required>
+                                        <input class="form-control" id="state1" placeholder="state" type="text" name="states" required>
 
                                     </div>
                                 </td>
 
                                 <td id="bodyCell">
-                                    <input class="form-control" placeholder="Key" type="text" name="formulas" required>
+                                    <input class="form-control" placeholder="formula" id="formula1" type="text" name="formulas" required>
                                 </td>
 
                                 <td>
-                                    <input class="form-control" placeholder="Key" type="text" name="formulas" required>
+                                    <input class="form-control" placeholder="formula" id="formula2" type="text" name="formulas" required>
                                 </td>
                             </tr>
 
                             <tr>
-                                <td>
+                                <td class="bg-light">
                                     <div class="input-group mb-3">
                                         <div class="input-group-prepend">
                                             <div class="input-group-text">
-                                                <input type="checkbox" name="isFinal" value="true">
+                                                <input type="checkbox" name="isFinal" id="checkBox2" value="true">
                                                 <input type="hidden" name="isFinal" value="false">
                                             </div>
                                         </div>
-                                        <input class="form-control" placeholder="state" type="text" name="states" required>
+                                        <input class="form-control" placeholder="state" id="state2" type="text" name="states" required>
                                     </div>
                                 </td>
 
                                 <td>
-                                    <input class="form-control" placeholder="Key" type="text" name="formulas" required>
+                                    <input class="form-control" placeholder="formula" id="formula3" type="text" name="formulas" required>
                                 </td>
 
                                 <td>
-                                    <input class="form-control" placeholder="Key" type="text" name="formulas" required>
+                                    <input class="form-control" placeholder="formula" id="formula4" type="text" name="formulas" required>
                                 </td>
 
                                 <td class="border-0" style=" min-width: 10px; padding: 6px;">
@@ -137,10 +136,10 @@
 
                 <div class="row">
                     <div class="col">
-                        <input class="form-control" placeholder="Input Word" type="text" name="inputWord" required>
+                        <input class="form-control" placeholder="Input Word" id="inputWord" type="text" name="inputWord" required>
                     </div>
                     <div class="col">
-                        <input type="submit" class="btn btn-success" value="Run">
+                        <input type="submit" id="run" class="btn btn-success" value="Run">
                     </div>
                 </div>
             </form>
@@ -152,104 +151,13 @@
     @*<div class="row-fluid">*@
         <div class="span6 column">
             <h3> Computation </h3>
-            <partial name="Tree.cshtml" />
+            <div id="computationArea">
+
+            </div>
+            @*<partial name="Tree.cshtml" />*@
         </div>
     </div>
 
-
-    <script>function addRow() {
-
-            var colCount = $("#myTable tr th").length;
-            var rowCount = $("#myTable tr").length;
-            var formulasCount = (colCount - 1) * (rowCount - 1);
-            var extraCell = 0;
-            var table = document.getElementById("myTable");
-            var row = document.createElement("TR");
-
-
-            for (let i = 0; i <= colCount; i++) {
-                var td = document.createElement("TD");
-
-                if (i == 0) {
-                    var html = `<div CLASS="input-group mb-3"> <div CLASS="input-group-prepend"> <div CLASS="input-group-text"> <input TYPE="checkbox" name="isFinal" VALUE="true">  <input TYPE="hidden" NAME="isFinal" VALUE="false"> </div></div> <input CLASS="form-control" PLACEHOLDER="state" TYPE="text" name="states" required> </div>`;
-                    td.innerHTML = html;
-                }
-
-                else if (i == colCount) {
-                    var html = `<button type="button" class="close" aria-label="Close" onClick="delRow(this)">
-                                                <span aria-hidden="true">&times;</span>
-                                                </button>`
-                    td.className = "border-0";
-                    td.style = "min-width: 10px; padding: 6px";
-                    td.innerHTML = html;
-                }
-
-                else {
-                    var html = `<input CLASS="form-control" PLACEHOLDER="key" TYPE="text" name="formulas" required>`;
-                    td.innerHTML = html;
-                }
-
-                row.appendChild(td);
-            }
-            table.appendChild(row);
-        }</script>
-
-
-
-    <script>function delRow(r) {
-
-            var ind = r.parentNode.parentNode.rowIndex;
-            var table = document.getElementById("myTable");
-            table.deleteRow(ind);
-        }</script>
-
-    <script>function delCol(c) {
-            var ind = c.closest("td").cellIndex;
-            $("tr").each(function (j, row) {
-                $(row).children(`td:eq(${ind}),th:eq(${ind})`).remove()
-            });
-        }</script>
-
-    <script>function addCol() {
-            var colCount = $("#myTable tr th").length;
-            $("#myTable tr").each((i, row) => {
-
-                if (i == 0) {
-                    var cell = document.createElement("td");
-                    cell.className = "border-0";
-                    cell.style.padding = "6px";
-                    cell.style.textAlign = "center";
-
-                    var closeButton = `<button type="button" class="close" onClick="delCol(this)">
-                                                                            <span aria-hidden="true">&times;</span>
-                                                                        </button>`;
-                    cell.innerHTML = closeButton;
-                    row.appendChild(cell);
-                }
-
-                else if (i == 1) {
-                    var cell = document.createElement("th")
-                    var headCell = $("#headCell").html()
-                    $(cell).html(headCell)
-                    row.appendChild(cell);
-                }
-
-                else if (i == 2) {
-                    var cell = document.createElement("td");
-                    var bodyCell = $("#bodyCell").html();
-                    $(cell).html(bodyCell);
-                    row.appendChild(cell);
-                }
-
-                else if (i > 2) {
-                    var cell = document.createElement("td");
-                    var bodyCell = $("#bodyCell").html();
-                    $(cell).html(bodyCell);
-                    row.appendChild(cell);
-                    row.insertBefore(cell, row.children[colCount]);
-                }
-            });
-        }</script>
 
 </body>
 
