--- a/AFAapp/wwwroot/css/site.css
+++ b/AFAapp/wwwroot/css/site.css
@@ -2,30 +2,30 @@
 for details on configuring this project to bundle and minify static web assets. */
 
 a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+    white-space: normal;
+    text-align: center;
+    word-break: break-all;
 }
 
 /* Provide sufficient contrast against white background */
 a {
-  color: #0366d6;
+    color: #0366d6;
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
 }
 
 .list {
-    text-align:center;
+    text-align: center;
     display: flex;
     justify-content: center;
 }
@@ -33,6 +33,7 @@ a {
 
 
 .right-col-p {
+    margin-top: 8%;
     margin-left: 8%;
 }
 
@@ -67,14 +68,15 @@ button.accept-policy {
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-/*   Margin bottom by footer height */
-  margin-bottom: 60px;
+    /*   Margin bottom by footer height */
+    margin-bottom: 60px;
 }
+
 .footer {
     position: absolute;
     bottom: 0;
@@ -82,5 +84,372 @@ body {
     white-space: nowrap;
     line-height: 60px;
     height: 60px;
-/*    background-color: DarkSalmon;*/
+    /*    background-color: DarkSalmon;*/
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*.tree,
+.tree ul,
+.tree li {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    position: relative;
+}
+
+.tree {
+    margin: 0 0 1em;
+    text-align: center;
+}
+
+    .tree,
+    .tree ul {
+        display: table;
+    }
+
+        .tree ul {
+            width: 100%;
+        }
+
+        .tree li {
+            display: table-cell;
+            padding: .5em 0;
+            vertical-align: top;
+        }
+
+            .tree li:before {
+                outline: solid 1px #666;
+                content: "";
+                left: 0;
+                position: absolute;
+                right: 0;
+                top: 0;
+            }
+
+            .tree li:first-child:before {
+                left: 50%;
+            }
+
+            .tree li:last-child:before {
+                right: 50%;
+            }
+
+        .tree code,
+        .tree span {
+            border: solid .1em #666;
+            border: none;
+            border-radius: .2em;
+            display: inline-block;
+            margin: 0 .2em .5em;
+            padding: .2em .5em;
+            position: relative;
+        }
+
+            .tree ul:before,
+            .tree code:before,
+            .tree span:before {
+                outline: solid 1px #666;
+                content: "";
+                height: .5em;
+                left: 50%;
+                position: absolute;
+            }
+
+        .tree ul:before {
+            top: -.5em;
+        }
+
+        .tree code:before,
+        .tree span:before {
+            top: -.55em;
+        }
+
+        .tree > li {
+            margin-top: 0;
+        }
+
+            .tree > li:before,
+            .tree > li:after,
+            .tree > li > code:before,
+            .tree > li > span:before {
+                outline: none;
+            }
+
+*/
+
+
+
+
+
+
+
+/*            Tree3*/
+
+.tree-diagram ul {
+    display: flex;
+    position: relative;
+    /* Reset */
+    list-style-type: none;
+    margin: 0;
+    padding: 1rem 0.5rem 0rem 0.5rem;
+    height: 100%;
+    justify-content: center;
+
+}
+
+
+    .tree-diagram ul ul::before {
+        border-right: 1px solid rgba(0, 0, 0, .3);
+        content: '';
+        /* Position */
+        position: absolute;
+        top: 0;
+        right: 50%;
+        /* Size */
+        height: 1rem;
+        width: 50%;
+    }
+
+.tree-diagram li {
+    padding: 1rem 0.5rem 0rem 0.5rem;
+    position: relative;
+    /* Center the content */
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
+    .tree-diagram li::before {
+        border-right: 1px solid rgba(0, 0, 0, .3);
+        border-top: 1px solid rgba(0, 0, 0, .3);
+        content: '';
+        /* Position */
+        position: absolute;
+        top: 0;
+        right: 50%;
+        /* Size */
+        height: 1rem;
+        width: 50%;
+    }
+
+    .tree-diagram li::after {
+        border-top: 1px solid rgba(0, 0, 0, .3);
+        content: '';
+        /* Position */
+        position: absolute;
+        top: 0;
+        right: 0;
+        /* Size */
+        width: 50%;
+    }
+
+    .tree-diagram li:first-child::before,
+    .tree-diagram li:last-child::after {
+        /* Remove the top of border from the first and last items */
+        border-top: none;
+    }
+
+.tree-diagram .connectives::before {
+    border-right: none !important;
+    /*        border-top: 1px dotted !important*/
+}
+
+
+/*.tree-diagram .connectives::after{*/
+/*    border-right: 1px dotted rgba(0, 0, 0, .3) !important;*/
+    /*border: 1px dotted !important
+}*/
+
+/* Add a root item if you want */
+li.tree-diagram__root::before {
+    border-right: none;
+}
+
+
+
+
+
+.tr ul {
+    display: table;
+    position: relative;
+    /* Reset */
+    list-style-type: none;
+    margin: 0;
+    padding: 1rem 0.5rem 0rem 0.5rem;
+}
+
+
+.tr ul ul::before {
+    border-right: 1px solid rgba(0, 0, 0, .3);
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 50%;
+    height: 1rem;
+    width: 50%;
+}
+
+
+/*.tr ul {
+    display: table;
+}*/
+
+.tr li {
+    padding: 1rem 0.5rem 0rem 0.5rem;
+    position: relative;
+/*     Center the content */
+/*    align-items: center;*/
+    display: table-cell;
+/*    flex-direction: column;*/
+}
+
+
+.tr li::before {
+    border-right: 1px solid rgba(0, 0, 0, .3);
+    border-top: 1px solid rgba(0, 0, 0, .3);
+    content: '';
+    /* Position */
+    position: absolute;
+    top: 0;
+    right: 50%;
+    /* Size */
+    height: 1rem;
+    width: 50%;
+}
+
+.tr li::after {
+    border-top: 1px solid rgba(0, 0, 0, .3);
+    content: '';
+    /* Position */
+    position: absolute;
+    top: 0;
+    right: 0;
+    /* Size */
+    width: 50%;
+}
+
+
+
+.tr li:first-child::before,
+.tr li:last-child::after {
+    /* Remove the top of border from the first and last items */
+    border-top: none;
+}
+
+/* Add a root item if you want */
+li.tr__root::before {
+    border-right: none;
+}
+
+
+
+
+
+
+.tree {
+    background: white;
+}
+
+.tree ul {
+    padding-top: 20px;
+    position: relative;
+    webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    transition: all 0.3s;
+    display: flex;
+    justify-content: center;
+}
+
+.tree li {
+    float: left;
+    list-style: none;
+    text-align: center;
+    position: relative;
+    padding: 20px 5px 0 5px;
+}
+/*    Use::before,::after as branch line*/
+    .tree li::before,
+    .tree li::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        right: 50%;
+        width: 50%;
+        height: 20px;
+        border-top: 1px solid #ccc;
+    }
+
+    .tree li:after {
+        right: auto;
+        left: 50%;
+        border-left: 1px solid #ccc;
+    }
+
+    .tree li:first-child::before,
+    .tree li:last-child::after {
+        border: 0 none;
+    }
+
+    .tree li:last-child::before {
+        border-right: 1px solid #ccc;
+        border-radius: 0 10px 0 0;
+    }
+
+    .tree li:first-child::after {
+        border-radius: 10px 0 0 0;
+    }
+
+/*    Delete branch lines with only one branch*/
+    .tree li:only-child::before,
+    .tree li:only-child::after {
+        border: none;
+    }
+
+    .tree li:only-child {
+        padding-top: 0;
+    }
+
+/*Add a lower branch line with only one branch*/
+.tree ul ul::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 50%;
+    border-left: 1px solid #ccc;
+    width: 0;
+    height: 20px;
+}
+
+.tree a {
+    font-size: 12px;
+    display: inline-block;
+    color: #666;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+.heda {
+    width: 50px;
+    height: 60px;
+    margin: auto;
+    background: #ccc;
+    text-align: center;
+}
+
 }
